src/parser/snapshots/dinky_c__parser__parser__tests__parse_bang_equals.snap
---
source: src/parser/parser.rs
expression: ast
---
FN (id: main)
	returns: int
	params: ()
	body:
		RETURN (2 != 3)
