src/parser/snapshots/dinky_c__parser__parser__tests__parse_binary_op_precedence_2.snap
---
source: src/parser/parser.rs
expression: ast
---
FN (id: main)
	returns: int
	params: ()
	body:
		RETURN (1 - (3 / 4))
